--- a/Works/index.html
+++ b/Works/index.html
@@ -29,6 +29,16 @@
 				<a class="mobileMenu-page" href="">Other</a>
 			</div>
 		</div>
+		<div class="outer-container">
+		    <div class="flex-container">
+		      <div class="column"><img src="../Images/lboard1.png">Laser Etched Longboard<img src="../Images/twit-book.png">Time Publication<img src="../Images/buttons.png"></a>Hues Buttons<img src="../Images/lboard1.png"> Laser Etched Longboard
+		      </div>
+		      <div class="column"><img src="../Images/screenprint.png">Screen Printing Wiki Book<img src="../Images/rules-poster.png">Transparent Poster "No More Rules"<img src="../Images/light-stand.png">Light Stand of Transparent Papers<img src="../Images/finch.png">Finch Fortress
+		      </div>
+		      <div class="column"><img src="../Images/recipe.png">Recipe Poster<img src="../Images/lboard2.png">Laser Etched Longboard<img src="../Images/wave-shirt.png">Wave Shirt<img src="../Images/lboard1.png">Laser Etched Longboard
+		      </div>
+	    	</div>
+		</div>
 		<h3></h3>
 	</div>
 </body>
@@ -39,7 +49,7 @@
 
 $( ".button" ).click(function(){
 	$(".mobile-menu").slideToggle();
-	$(".images").toggle();
+	$(".outer-container").toggle();
 	 });
 
 $( ".works" ).click(function(){
