--- a/Shop/index.html
+++ b/Shop/index.html
@@ -7,30 +7,8 @@
 <body>
 	<div class="container">
 		<image class="logo" src="../Images/hues-3.png"></image>
-		<div class='menu'>
-			<a href="../Home/index.html">Home</a>
-			<a href="../Works/index.html">Works</a>
-			<a href="../Shop/index.html">Shop</a>
-			<a href="../About/index.html">About</a>
-		</div>
-		<div class='button'></div>
-		<div class='mobile-menu'>
-			<a class="mobileMenu-page" href="../Home/index.html">Home</a>
-			<a class="mobileMenu-page works">Works</a>
-			<a class="mobileMenu-page" href="../Shop/index.html">Shop</a>
-			<a class="mobileMenu-page" href="../About/index.html">About</a>
-			<div class="works-menu">
-				<a class="mobileMenu-page" href="../Works/index.html">All</a>
-				<a class="mobileMenu-page" href="">Books</a>
-				<a class="mobileMenu-page" href="">Branding</a>
-				<a class="mobileMenu-page" href="">Print</a>
-				<a class="mobileMenu-page" href="">Type</a>
-				<a class="mobileMenu-page" href="">Web</a>
-				<a class="mobileMenu-page" href="">Other</a>
-			</div>
-		</div>
 		<h3></h3>
-		<iframe src="http://xn--hue-j8y.com/shop/"></iframe>
+		<iframe src="http://xn--hue-j8y.com/shop/" frameborder="0"></iframe>
 	</div>
 </body>
 
