--- a/Works/index.html
+++ b/Works/index.html
@@ -31,7 +31,7 @@
 		</div>
 		<div class="outer-container">
 		    <div class="flex-container">
-		      <div class="column"><img src="../Images/lboard1.png">Laser Etched Longboard<img src="../Images/twit-book.png">Time Publication<img src="../Images/buttons.png"></a>Hues Buttons<img src="../Images/lboard1.png"> Laser Etched Longboard
+		      <div class="column"><a id="imgLink" href="../Works/lboard/index.html"><img src="../Images/lboard1.png"></a>Laser Etched Longboard<img src="../Images/twit-book.png">Time Publication<img src="../Images/buttons.png"></a>Hues Buttons<img src="../Images/lboard1.png"> Laser Etched Longboard
 		      </div>
 		      <div class="column"><img src="../Images/screenprint.png">Screen Printing Wiki Book<img src="../Images/rules-poster.png">Transparent Poster "No More Rules"<img src="../Images/light-stand.png">Light Stand of Transparent Papers<img src="../Images/finch.png">Finch Fortress
 		      </div>
