--- a/About/index.html
+++ b/About/index.html
@@ -9,18 +9,18 @@
 		<image class="logo" src="../Images/hues-3.png"></image>
 		<div class='menu'>
 			<a href="../Home/index.html">Home</a>
-			<a href="../Works/index.html">Works</a>
+			<a href="../Work/index.html">Work</a>
 			<a href="../Shop/index.html">Shop</a>
 			<a href="../About/index.html">About</a>
 		</div>
 		<div class='button'></div>
 		<div class='mobile-menu'>
 			<a class="mobileMenu-page" href="../Home/index.html">Home</a>
-			<a class="mobileMenu-page works">Works</a>
+			<a class="mobileMenu-page works">Work</a>
 			<a class="mobileMenu-page" href="../Shop/index.html">Shop</a>
 			<a class="mobileMenu-page" href="../About/index.html">About</a>
 			<div class="works-menu">
-				<a class="mobileMenu-page" href="../Works/index.html">All</a>
+				<a class="mobileMenu-page" href="../Work/index.html">All</a>
 				<a class="mobileMenu-page" href="">Books</a>
 				<a class="mobileMenu-page" href="">Branding</a>
 				<a class="mobileMenu-page" href="">Print</a>
