--- a/Home/index.html
+++ b/Home/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="main.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script type="text/javascript" src="../paperjs-v0.9.25/dist/paper-full.js"></script>
+  <script type="text/javascript" src="../paper-full.js"></script>
 </head>
 <body>
 	<canvas id="canvas" resize hidpi="off"></canvas>
@@ -13,18 +13,18 @@
 		<image class="images" src=""></image>
 		<div class='menu'>
 			<a href="../Home/index.html">Home</a>
-			<a href="../Works/index.html">Works</a>
+			<a href="../Work/index.html">Work</a>
 			<a href="../Shop/index.html">Shop</a>
 			<a href="../About/index.html">About</a>
 		</div>
 		<div class='button'></div>
 		<div class='mobile-menu'>
 			<a class="mobileMenu-page" href="../Home/index.html">Home</a>
-			<a class="mobileMenu-page works">Works</a>
+			<a class="mobileMenu-page works">Work</a>
 			<a class="mobileMenu-page" href="../Shop/index.html">Shop</a>
 			<a class="mobileMenu-page" href="../About/index.html">About</a>
 			<div class="works-menu">
-				<a class="mobileMenu-page" href="../Works/index.html">All</a>
+				<a class="mobileMenu-page" href="../Work/index.html">All</a>
 				<a class="mobileMenu-page" href="">Books</a>
 				<a class="mobileMenu-page" href="">Branding</a>
 				<a class="mobileMenu-page" href="">Print</a>
@@ -60,6 +60,7 @@ var image = [
 	'../Images/buttons.png',
 	'../Images/lboard1.png',
 	'../Images/lboard2.png',
+	'../Images/lboard3.png',
 	'../Images/light-stand.png',
 	'../Images/finch.png',
 	];
