--- a/Work/lightstand/index.html
+++ b/Work/lightstand/index.html
@@ -41,12 +41,15 @@
 		    <div class="flex-container">
 		      <div class="column">
 		      	<img src="../../Images/Lightstand/stand1.jpg">
+		      	<img src="../../Images/tran-poster/tranposter1.jpg">
 		      </div>
 		      <div class="column">
 		      	<img src="../../Images/Lightstand/stand2.jpg">
+		      	<img src="../../Images/tran-poster/tranposter4.jpg">
 		      </div>
 		      <div class="column">
 		      	<img src="../../Images/Lightstand/stand3.jpg">
+		      	<img src="../../Images/tran-poster/tranposter6.jpg">
 		      </div>
 	    	</div>
     	</div>
