--- a/Work/time-pub/index.html
+++ b/Work/time-pub/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="main.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Twitter Time Publication</title>
 </head>
 <body>
 	<div class="container">
@@ -39,22 +40,17 @@
 		<div class="outer-container">
 		    <div class="flex-container">
 		      <div class="column">
-		      	<img src="../../Images/lboard2.png">
-		      	<img src="../../Images/Longboards/Book-LongBoards6.jpg">
-		      	<img src="../../Images/Longboards/Book-LongBoards7.jpg">
-		      	<img src="../../Images/Longboards/longboard-edit-3.jpg">
+		      	<img src="../../Images/Twit-Pub/twit6.png">
+		      	<img src="../../Images/Twit-Pub/twit1.png">
+		      	<img src="../../Images/Twit-Pub/twit4.png">
 		      </div>
 		      <div class="column">
-		      	<img src="../../Images/Longboards/small-board-1.png">
-		      	<img src="../../Images/Longboards/Book-LongBoards2.jpg">
-		      	<img src="../../Images/Longboards/Book-LongBoards3.jpg">
-		      	<img src="../../Images/Longboards/longboard-edit-2.jpg">
+		      	<img src="../../Images/Twit-Pub/twit2.png">
+		      	<img src="../../Images/Twit-Pub/twit5.png">
 		      </div>
 		      <div class="column">
-		      	<img src="../../Images/lboard3.png">
-		      	<img src="../../Images/Longboards/Book-LongBoards4.jpg">
-		      	<img src="../../Images/Longboards/Book-LongBoards5.jpg">
-		      	<img src="../../Images/Longboards/longboard-edit-1.jpg">
+		      	<img src="../../Images/Twit-Pub/twit3.png">
+		      	<img src="../../Images/twit-book.png">
 		      </div>
 	    	</div>
     	</div>
