--- a/Work/tran-poster/index.html
+++ b/Work/tran-poster/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="main.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Transparent Poster</title>
 </head>
 <body>
 	<div class="container">
@@ -39,22 +40,17 @@
 		<div class="outer-container">
 		    <div class="flex-container">
 		      <div class="column">
-		      	<img src="../../Images/lboard2.png">
-		      	<img src="../../Images/Longboards/Book-LongBoards6.jpg">
-		      	<img src="../../Images/Longboards/Book-LongBoards7.jpg">
-		      	<img src="../../Images/Longboards/longboard-edit-3.jpg">
+		      	<img src="../../Images/tran-poster/tranposter1.jpg">
+		      	<img src="../../Images/tran-poster/tranposter4.jpg">
+		      	<img src="../../Images/tran-poster/transparent.png">
 		      </div>
 		      <div class="column">
-		      	<img src="../../Images/Longboards/small-board-1.png">
-		      	<img src="../../Images/Longboards/Book-LongBoards2.jpg">
-		      	<img src="../../Images/Longboards/Book-LongBoards3.jpg">
-		      	<img src="../../Images/Longboards/longboard-edit-2.jpg">
+		      	<img src="../../Images/tran-poster/tranposter2.jpg">
+		      	<img src="../../Images/tran-poster/tranposter5.jpg">
 		      </div>
 		      <div class="column">
-		      	<img src="../../Images/lboard3.png">
-		      	<img src="../../Images/Longboards/Book-LongBoards4.jpg">
-		      	<img src="../../Images/Longboards/Book-LongBoards5.jpg">
-		      	<img src="../../Images/Longboards/longboard-edit-1.jpg">
+		      	<img src="../../Images/tran-poster/tranposter3.jpg">
+		      	<img src="../../Images/tran-poster/tranposter6.jpg">
 		      </div>
 	    	</div>
     	</div>
