--- a/Work/tran-poster/index.html
+++ b/Work/tran-poster/index.html
@@ -40,7 +40,7 @@
 		<div class="outer-container">
 		    <div class="flex-container">
 		      <div class="column">
-		      	<img src="../../Images/tran-poster/poster1.png">
+		      	<img src="../../Images/rules-poster.png">
 		      	<img src="../../Images/tran-poster/tranposter4.jpg">
 		      	<img src="../../Images/tran-poster/transparent.png">
 		      </div>
