--- a/Home/index.html
+++ b/Home/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="main.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script type="text/javascript" src="../paper-full.js"></script>
+  <title>Hueṡ</title>
 </head>
 <body>
 	<canvas id="canvas" resize hidpi="off"></canvas>
@@ -25,12 +26,12 @@
 			<a class="mobileMenu-page" href="../About/index.html">About</a>
 			<div class="works-menu">
 				<a class="mobileMenu-page" href="../Work/index.html">All</a>
-				<a class="mobileMenu-page" href="">Books</a>
-				<a class="mobileMenu-page" href="">Branding</a>
-				<a class="mobileMenu-page" href="">Print</a>
-				<a class="mobileMenu-page" href="">Type</a>
-				<a class="mobileMenu-page" href="">Web</a>
-				<a class="mobileMenu-page" href="">Other</a>
+				<a class="mobileMenu-page" href="../Books/index.html">Books</a>
+				<a class="mobileMenu-page" href="../Branding/index.html">Branding</a>
+				<a class="mobileMenu-page" href="../Print/index.html">Print</a>
+				<a class="mobileMenu-page" href="../Type/index.html">Type</a>
+				<a class="mobileMenu-page" href="../Web/index.html">Web</a>
+				<a class="mobileMenu-page" href="../Video/index.html">Video</a>
 			</div>
 		</div>
 		<h3></h3>
