--- a/Work/fontstruck/index.html
+++ b/Work/fontstruck/index.html
@@ -22,12 +22,12 @@
 			<a class="mobileMenu-page" href="../../About/index.html">About</a>
 			<div class="works-menu">
 				<a class="mobileMenu-page" href="../../Work/index.html">All</a>
-				<a class="mobileMenu-page" href="">Books</a>
-				<a class="mobileMenu-page" href="">Branding</a>
-				<a class="mobileMenu-page" href="">Print</a>
-				<a class="mobileMenu-page" href="">Type</a>
-				<a class="mobileMenu-page" href="">Web</a>
-				<a class="mobileMenu-page" href="">Other</a>
+				<a class="mobileMenu-page" href="../../Books/index.html">Books</a>
+				<a class="mobileMenu-page" href="../../Branding/index.html">Branding</a>
+				<a class="mobileMenu-page" href="../../Print/index.html">Print</a>
+				<a class="mobileMenu-page" href="../../Type/index.html">Type</a>
+				<a class="mobileMenu-page" href="../../Web/index.html">Web</a>
+				<a class="mobileMenu-page" href="../../Video/index.html">Video</a>
 			</div>
 		</div>
 		<div id="wrapper">
