--- a/Work/finch-fort/index.html
+++ b/Work/finch-fort/index.html
@@ -17,7 +17,6 @@ body {
 
 .container {
 	width: 100%;
-	height: 2300px;
 	text-align: center;
 	position: absolute;
 }
@@ -36,7 +35,8 @@ body {
 	font-weight: 800;
 	position: relative;
 	height: auto;
-	padding-top: 130px;
+	padding-top: 145px;
+	padding-bottom: 150px;
 }
 
 .flex-container {
@@ -51,14 +51,14 @@ body {
 
 .column {
 	width: 400px;
-	padding: 5px;
+	padding: 0px;
 	align-item: center;
 }
 
 img {
-  max-width: 100%;
-  padding-bottom: 5px;
-  padding-top: 5px;
+  max-width: 90%;
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
 
 .content {
@@ -84,33 +84,35 @@ h2 {
 
 p {
 	display: inline-block;
+	text-align: justify;
+    text-justify: inter-word;
 	position: absolute;
-	width: 40%;
-	padding-right: 120px;
+	width: 38%;
+	padding-right: 10%;
 	padding-top: 20px;
 	bottom: 0px;
 	right: 0px;
-	top: 450px;
+	top: 300px;
 }
 
 @media screen and (max-width: 640px) {
 
 .container {
-	height: 3600px;
+	height: 800px;
 }
 
 
 .column {
-	width: 350px;
+	width: 250px;
 	align-item: center;
-	padding: 0px;
+	padding-left: 70px;
 }
 
 p {
 	display: inline-block;
 	position: absolute;
 	width: 55%;
-	padding-right: 40px;
+	padding-right: 60px;
 	padding-top: 40px;
 	bottom: 0px;
 	top: 450px;
@@ -125,6 +127,7 @@ p {
 
 .outer-container{
 	padding-top: 450px;
+	padding-bottom: 100px;
 	padding-left: 25px;
 }
 }
