--- a/Work/tran-poster/index.html
+++ b/Work/tran-poster/index.html
@@ -1,38 +1,180 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="../../main.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Hueṡ Graphic Design Studio">
+  <meta name="keywords" content="hues,hueṡ,hue,hughes,graphic design,parsons,studio,portfolio,design,new york city,dylan,hughes,easton,easton pa,art,work,branding,books,photography,graphic,type,typography,communication,chill,chill dill,dill,ṡ,">
+  <meta name="author" content="Dylan Hughes">
+  <link rel="shortcut icon" type="image/png" href="../../assets/favicon.png">
   <title>Transparent Poster</title>
 </head>
+<style>
+
+body {
+	overflow-x: hidden;
+}
+
+.container {
+	width: 100%;
+	text-align: center;
+	position: absolute;
+}
+
+	#imgLink {
+	padding-left: 0px;
+}
+
+.outer-container {
+	position: fixed;
+	display: inline-block;
+	text-align: center;
+	text-transform: uppercase;
+	font-style: italic;
+	font-size: 10px;
+	font-weight: 800;
+	position: relative;
+	height: auto;
+	padding-top: 145px;
+	padding-bottom: 150px;
+}
+
+.flex-container {
+	text-align: center;
+	width: 100%;
+	height: auto;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-wrap: wrap;
+	flex-wrap: wrap;
+}
+
+.column {
+	width: 400px;
+	padding: 0px;
+	align-item: center;
+}
+
+img {
+  max-width: 90%;
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
+.content {
+	text-align: left;
+}
+
+#wrapper{
+	width: 600px;
+	padding-top: 100px;
+	padding-left: 10px;
+	text-align: center;
+}
+
+#featIMG {
+	width: 600px;
+}
+
+h2 {
+	position: relative;
+	text-transform: uppercase;
+	padding-bottom: 20px;
+}
+
+p {
+	display: inline-block;
+	text-align: justify;
+    text-justify: inter-word;
+	position: absolute;
+	width: 38%;
+	padding-right: 10%;
+	padding-top: 20px;
+	bottom: 0px;
+	right: 0px;
+	top: 300px;
+}
+
+@media screen and (max-width: 640px) {
+
+.container {
+	height: 800px;
+}
+
+
+.column {
+	width: 250px;
+	align-item: center;
+	padding-left: 70px;
+}
+
+p {
+	display: inline-block;
+	position: absolute;
+	width: 55%;
+	padding-right: 60px;
+	padding-top: 40px;
+	bottom: 0px;
+	top: 450px;
+}
+
+#wrapper{
+	width: 100%;
+	padding-top: 80px;
+	padding-left: 0px;
+	text-align: center;
+}
+
+.outer-container{
+	padding-top: 450px;
+	padding-bottom: 100px;
+	padding-left: 25px;
+}
+}
+</style>
 <body>
 	<div class="container">
-		<image class="logo" src="../../Images/hues-3.png"></image>
+		<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"       xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		 viewBox="0 0 960 560" style="enable-background:new 0 0 960 560;" xml:space="preserve">
+		<g>
+			<g>
+				<path d="M231.1,484.7h-55.3V353.6H96.1v131.1H40.8V167.2h55.3v131.1h79.7V167.2h55.3V484.7z"/>
+				<path d="M479.1,392.9c0,51.8-42.8,94.7-95.5,94.7c-51.8,0-94.7-42.8-94.7-94.7V167.2h55.3v225.6c0.4,25.3,18.4,39.4,39.4,39.4
+					c21.9-0.4,40.3-18.4,40.3-39.4V167.2h55.3V392.9z"/>
+				<path d="M591.7,298.3h107.1v55.3H591.7V429h107.1v55.7H536.4V167.2h162.4v55.7H591.7V298.3z"/>
+				<path d="M836.3,430.7c21.7,0,37.3-13.1,37.3-31.9c0-28.4-47.3-38.9-83.4-59.9c-25.6-14.4-50-42.4-50-81.7
+					c0-53.7,43.4-93.5,96-93.5c53.4,0,96.9,43.7,96.9,97.4h-56c-1.3-22.3-18.7-40.6-40.8-40.6s-36.9,10.9-36.9,32.8
+					c0,24.5,40.4,37.1,73.8,55.1c29.1,16.2,59.9,42.4,59.9,86.5c0,52.9-43.4,92.6-96.9,92.6c-52.6,0-96-43.7-96-97h56
+					C797.2,412.4,814.6,430.7,836.3,430.7z"/>
+			</g>
+			<circle cx="836.7" cy="101.6" r="29.1"/>
+		</g>
+		</svg>
 		<div class='menu'>
-			<a href="../../Home/index.html">Home</a>
-			<a href="../../Work/index.html">Work</a>
-			<a href="../../Shop/index.html">Shop</a>
-			<a href="../../About/index.html">About</a>
+			<a href="../../index.html">Home</a>
+			<a href="../../work/index.html">Work</a>
+			<a href="../../shop/index.html">Shop</a>
+			<a href="../../about/index.html">About</a>
 		</div>
 		<div class='button'></div>
 		<div class='mobile-menu'>
-			<a class="mobileMenu-page" href="../../Home/index.html">Home</a>
+			<a class="mobileMenu-page" href="../../index.html">Home</a>
 			<a class="mobileMenu-page works">Work</a>
-			<a class="mobileMenu-page" href="../../Shop/index.html">Shop</a>
-			<a class="mobileMenu-page" href="../../About/index.html">About</a>
+			<a class="mobileMenu-page" href="../../shop/index.html">Shop</a>
+			<a class="mobileMenu-page" href="../../about/index.html">About</a>
 			<div class="works-menu">
-				<a class="mobileMenu-page" href="../../Work/index.html">All</a>
-				<a class="mobileMenu-page" href="../../Books/index.html">Books</a>
-				<a class="mobileMenu-page" href="../../Branding/index.html">Branding</a>
-				<a class="mobileMenu-page" href="../../Print/index.html">Print</a>
-				<a class="mobileMenu-page" href="../../Type/index.html">Type</a>
-				<a class="mobileMenu-page" href="../../Web/index.html">Web</a>
-				<a class="mobileMenu-page" href="../../Video/index.html">Video</a>
+				<a class="mobileMenu-page" href="../../work/index.html">All</a>
+				<a class="mobileMenu-page" href="../../books/index.html">Books</a>
+				<a class="mobileMenu-page" href="../../branding/index.html">Branding</a>
+				<a class="mobileMenu-page" href="../../print/index.html">Print</a>
+				<a class="mobileMenu-page" href="../../type/index.html">Type</a>
+				<a class="mobileMenu-page" href="../../web/index.html">Web</a>
+				<a class="mobileMenu-page" href="../../video/index.html">Video</a>
 			</div>
 		</div>
 		<div id="wrapper">
 			<h2>Transparent Poster</h2>
-			<image id="featIMG" src="../../Images/rules-poster.png"></image>
+			<image id="featIMG" src="../../assets/rules-poster.png"></image>
 		</div>
 		<div class="content">
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse porta nibh non nisi laoreet suscipit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam dui leo, rhoncus nec orci sit amet, tempus fringilla justo. Ut commodo tortor quis diam ullamcorper, vestibulum maximus enim pellentesque. Mauris quis nisl quis diam congue fringilla feugiat ut nisi. Sed volutpat aliquet ullamcorper. Suspendisse interdum lorem sem, id maximus turpis convallis in.</p>
@@ -40,17 +182,17 @@
 		<div class="outer-container">
 		    <div class="flex-container">
 		      <div class="column">
-		      	<img src="../../Images/Tran-Poster/poster1.png">
-		      	<img src="../../Images/Tran-Poster/tranposter4.jpg">
-		      	<img src="../../Images/Tran-Poster/transparent.png">
+		      	<img src="../../assets/Tran-Poster/poster1.png">
+		      	<img src="../../assets/Tran-Poster/tranposter4.jpg">
+		      	<img src="../../assets/Tran-Poster/transparent.png">
 		      </div>
 		      <div class="column">
-		      	<img src="../../Images/Tran-Poster/tranposter2.jpg">
-		      	<img src="../../Images/Tran-Poster/tranposter5.jpg">
+		      	<img src="../../assets/Tran-Poster/tranposter2.jpg">
+		      	<img src="../../assets/Tran-Poster/tranposter5.jpg">
 		      </div>
 		      <div class="column">
-		      	<img src="../../Images/Tran-Poster/tranposter3.jpg">
-		      	<img src="../../Images/Tran-Poster/tranposter6.jpg">
+		      	<img src="../../assets/Tran-Poster/tranposter3.jpg">
+		      	<img src="../../assets/Tran-Poster/tranposter6.jpg">
 		      </div>
 	    	</div>
     	</div>
@@ -59,7 +201,7 @@
 </body>
 
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-<script src="../../randomColor.js"></script>
+<script src="../../main.js"></script>
 <script>
 
 $( ".button" ).click(function(){
@@ -72,18 +214,6 @@ $( ".button" ).click(function(){
 $( ".works" ).click(function(){
 	$(".works-menu").slideToggle();
 	 });
-
-	var changeColor = function() {
-		var color = randomColor({ 
-			luminosity: 'light',
-		    hue: 'random'
-		});
-		$('.container').css('background-color',color);
-		$('h3').text(color);
-		console.log("change color");
-		
-	}
-	changeColor();
 
 </script>
 
